<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	    xmlns:android="http://schemas.android.com/apk/res/android"	
		android:orientation="vertical" 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">

		<Button
		    android:id="@+id/task_list"
		    android:layout_width="120dp"
		    android:layout_height="wrap_content"
		    android:text="@string/task_list" />

		<Button
		    android:id="@+id/time_slots"
		    android:layout_width="120dp"
		    android:layout_height="wrap_content"
		    android:text="@string/time_slots" />

		<Button
		    android:id="@+id/schedule"
		    android:layout_width="120dp"
		    android:layout_height="wrap_content"
		    android:text="@string/schedule" />

		<Button
		    android:id="@+id/exit"
		    android:layout_width="120dp"
		    android:layout_height="wrap_content"
		    android:text="@string/exit" />

	</LinearLayout>
