<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
	xmlns:android="http://schemas.android.com/apk/res/android" 
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<LinearLayout	
		android:orientation="vertical" 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/timeslot_date" />

		<Button
		    android:id="@+id/timeslot_date"
		    android:layout_width="120dp"
		    android:layout_height="wrap_content" />

		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/timeslot_start_time" />

		<Button
		    android:id="@+id/start_time"
		    android:layout_width="120dp"
		    android:layout_height="wrap_content" />

		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/timeslot_end_time" />

		<Button
		    android:id="@+id/end_time"
		    android:layout_width="120dp"
		    android:layout_height="wrap_content" />

		<Button android:id="@+id/confirm" 
		  android:text="@string/confirm"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
	</LinearLayout>
</ScrollView>